# schnorrkel

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  annoucement.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: ed25519_benchmarks.rs  olaf_benchmarks.rs  schnorr_benchmarks.rs
iffy/migration_from_ed25519/src/: derive.rs.diff
iffy/src/: malleable.rs
src/: aead.rs  batch.rs  both.rs  cert.rs  context.rs  derive.rs  dleq.rs  ed25519.rs  errors.rs  identifier.rs  keys.rs  lib.rs  malleable.rs  multi.rs  musig.rs  points.rs  polynomial.rs  ristretto.rs  scalars.rs  schnorr.rs  serdey.rs  sign.rs  simplpedpop.rs  util.rs  vrf.rs
src/olaf/: data_structures.rs  errors.rs  frost.rs  identifier.rs  keys.rs  mod.rs  polynomial.rs  polynomials.rs  simplpedpop.rs  spp.rs  tests.rs  types.rs  utils.rs
src/olaf/frost/: data_structures.rs  errors.rs  mod.rs  tests.rs  types.rs  utils.rs
src/olaf/multisig/: errors.rs  mod.rs  types.rs
src/olaf/simplpedpop/: data_structures.rs  errors.rs  mod.rs  tests.rs  types.rs  utils.rs
