[package]
name = "schnorrkel"
version = "0.9.3"
authors = ["Jeff Burdges <jeff@web3.foundation>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/w3f/schnorrkel"
documentation = "https://docs.rs/schnorrkel"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Schnorr VRF, signatures, etc. using the Ristretto group"
exclude = [ ".gitignore", "res/*" ]
edition = "2018"

# [badges]
# travis-ci = { repository = "dalek-cryptography/ed25519-dalek", branch = "master"}

[dependencies.aead]
version = "0.4.0"
default-features = false
optional = true

[dependencies.arrayref]
version = "0.3.6"
default-features = false

[dependencies.arrayvec]
version = "0.5.2"
default-features = false

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
# git = "https://github.com/dalek-cryptography/curve25519-dalek"
version = "4.0"
default-features = false

# [dependencies.ed25519-dalek]
# version = "1.0.0"
# default-features = false
# optional = true

[dependencies.subtle]
package = "subtle-ng"
version = "2.2.1"
default-features = false

[dependencies.merlin]
version = "3.0"
# features = ["debug-transcript"]
default-features = false

[dependencies.rand]
version = "0.8.3"
default-features = false
optional = true

[dependencies.rand_core]
version = "0.6.2"
default-features = false

[dependencies.getrandom]
version = "0.2.2"
default-features = false
optional = true

[dependencies.rand_chacha]
version = "0.3"
default-features = false
optional = true

[dependencies.serde]
version = "1.0.123"
default-features = false
optional = true

[dependencies.sha2]
version = "0.9.3"
default-features = false

[dependencies.failure]
version = "0.1.8"
default-features = false
optional = true

[dependencies.zeroize]
version = "1.2.0"
default-features = false
features = ["zeroize_derive"]

[dev-dependencies]
rand = "0.8.3"
rand_chacha = "0.3"
# hex = "0.3.2"
hex-literal = "0.2.1"
sha2 = "0.9.3"
sha3 = "0.9.1"
bincode = "1.3.2"
criterion = "0.3.4"

[[bench]]
name = "schnorr_benchmarks"
harness = false

[features]
default = ["std", "u64_backend", "rand", "getrandom"] # "chacha"
preaudit_deprecated = []
nightly = ["curve25519-dalek/nightly", "rand/nightly"] # "zeroize/nightly"
alloc = ["curve25519-dalek/alloc", "rand_core/alloc"]
chacha = ["rand_chacha"]
std = ["getrandom", "curve25519-dalek/std", "rand/std"] # "failure/std"
wasm-bindgen = ["getrandom/wasm-bindgen"]
asm = ["sha2/asm"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
